<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Productversion="">
  <DUT Name="E_VirtualInput" Id="f93aabcc-ea90-4d77-a27b-5c95d83955c9">
    <Declaration><![CDATA[{attribute 'qualified_only'}
TYPE E_VirtualInput : 
(
	eContext_No := 0, //
	eContext_V1_127_0_0_1_PackMLPlcStream1_10_00ms := 2#0000_0000_0000_0000_0000_0000_0000_0001, //127_0_0_1_PackMLPlcStream1_10_00ms
	eContext_Vn_Reserve1 := 2#0000_0000_0000_0000_0000_0000_0000_0010, //Reserve
	eContext_Vn_Reserve2 := 2#0000_0000_0000_0000_0000_0000_0000_0100, //Reserve
	eContext_Vn_Reserve3 := 2#0000_0000_0000_0000_0000_0000_0000_1000, //Reserve
	eContext_Vn_Reserve4 := 2#0000_0000_0000_0000_0000_0000_0001_0000, //Reserve
	eContext_Vn_Reserve5 := 2#0000_0000_0000_0000_0000_0000_0010_0000, //Reserve
	eContext_Vn_Reserve6 := 2#0000_0000_0000_0000_0000_0000_0100_0000, //Reserve
	eContext_Vn_Reserve7 := 2#0000_0000_0000_0000_0000_0000_1000_0000, //Reserve
	eContext_Vn_Reserve8 := 2#0000_0000_0000_0000_0000_0001_0000_0000, //Reserve
	eContext_Vn_Reserve9 := 2#0000_0000_0000_0000_0000_0010_0000_0000, //Reserve
	eContext_Vn_Reserve10 := 2#0000_0000_0000_0000_0000_0100_0000_0000, //Reserve
	eContext_Vn_Reserve11 := 2#0000_0000_0000_0000_0000_1000_0000_0000, //Reserve
	eContext_Vn_Reserve12 := 2#0000_0000_0000_0000_0001_0000_0000_0000, //Reserve
	eContext_Vn_Reserve13 := 2#0000_0000_0000_0000_0010_0000_0000_0000, //Reserve
	eContext_Vn_Reserve14 := 2#0000_0000_0000_0000_0100_0000_0000_0000, //Reserve
	eContext_Vn_Reserve15 := 2#0000_0000_0000_0000_1000_0000_0000_0000 //Reserve
) DWORD;
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>